--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,13 @@
         "nesbot/carbon": "^2.18"
     },
     "autoload": {
-        "classmap": [
-        ],
         "psr-4": {
             "App\\": "src/"
-        },
-        "files": [
-        ]
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
     }
 }
